# Plataforma-Financiera-Chat-First

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: architecture-check.yml
app/: globals.css
app/(app)/: layout.tsx
apps/backend/: .env.example  README.md  pyproject.toml
apps/backend/src/: main.py
apps/backend/src/agents/: graph.py
apps/backend/src/agents/nodes/: __init__.py  build_response.py  classify_intent.py  extract_transaction.py  parse_input.py  persist_transaction.py  resolve_workspace.py
apps/backend/src/api/v1/routes/: auth.py  chat.py  espacios.py  perfil.py  transacciones.py
apps/backend/src/core/: config.py  security.py
apps/backend/src/db/: supabase_client.py
apps/backend/src/repositories/: espacios_repository.py  perfiles_repository.py  transacciones_repository.py
apps/backend/src/schemas/: auth.py  chat.py  domain.py  espacios.py  transacciones.py
apps/backend/src/services/: auth_service.py  chat_service.py  espacios_service.py  perfil_service.py  transacciones_service.py
apps/backend/tests/: test_build_response.py  test_chat_parse.py  test_routes_integration.py  test_transitions.py
apps/frontend/: package.json
components/chat/: chat-input.tsx  chat-message.tsx
components/dashboard/: budget-card.tsx  summary-header.tsx
components/espacios/: create-workspace-sheet.tsx  member-list.tsx  shared-transaction-card.tsx  workspace-card.tsx
components/perfil/: profile-header.tsx  settings-list.tsx
lib/: mock-data.ts
lib/api/: client.ts  (+1 more)
scripts/: check-architecture.sh  check-frontend-services.sh
(+38 files in other folders)
