[project]
name = "backend"
version = "0.1.0"
description = "Chat-First Financial Platform backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "httpx>=0.28.0",
  "supabase>=2.17.0",
  "langgraph>=0.6.0",
  "langchain-google-genai>=4.2.1",
  "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
  "grandalf>=0.8",
  "ipykernel>=7.2.0",
  "langgraph-cli[inmem]>=0.4.12",
  "pytest>=8.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
